<resources>
    <string name="app_name">L-S Manager</string>
    <string name="message">消息</string>
    <string name="login">登录</string>
    <string name="refresh">刷新</string>
    <string name="batteryLevel">电量：</string>
    <string name="off">关闭</string>
    <string name="on">打开</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="checkbox_re">记住密码</string>
    <string name="button_confirm">确认</string>

    <string name="index">索引</string>
    <string name="time">时间</string>
    <string name="Sensor0">0</string>
    <string name="Sensor1">1</string>
    <string name="Sensor2">2</string>
    <string name="Sensor3">3</string>
    <string name="Sensor4">4</string>
    <string name="Sensor5">5</string>
</resources>