<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_username"
        android:lines="1" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:lines="1" />

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:text="@string/checkbox_re" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/shape"
        android:text="@string/button_confirm" />

</RelativeLayout>